--- a/templates/teste.html
+++ b/templates/teste.html
@@ -1,19 +1,20 @@
-
-Copiar código
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Upload CSV</title>
+    <link rel="stylesheet" href="static/style.css">
+    <title>Envio de Mensagens WhatsApp</title>
+
 </head>
 <body>
     <div class="container">
-        <h1>Envie o arquivo CSV</h1>
+        <h1>Envio de Mensagens WhatsApp</h1>
         <form action="{{ url_for('upload_file') }}" method="post" enctype="multipart/form-data">
             <label for="file">Selecione o arquivo CSV:</label>
             <input type="file" name="file" id="file" required>
-            <button type="submit">Enviar</button>
+            <button type="submit">Enviar Mensagens</button>
         </form>
     </div>
 </body>
