--- a/static/style.css
+++ b/static/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #6b1717;
+    background-color: #ffffff;
     margin: 0;
     padding: 0;
     display: flex;
@@ -10,7 +10,7 @@ body {
 }
 
 .container {
-    background-color: rgb(155, 22, 22);
+    background-color: #da8f8f;
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
@@ -33,7 +33,7 @@ input[type="file"] {
 
 button {
     padding: 10px 20px;
-    background-color: #4CAF50;
+    background-color: #ffffff;
     color: rgb(126, 36, 36);
     border: none;
     border-radius: 5px;
@@ -41,5 +41,5 @@ button {
 }
 
 button:hover {
-    background-color: #45a049;
+    background-color: #ffffff;
 }
