--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,9 @@
-
-Copiar código
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="static/style.css">
     <title>Upload CSV</title>
 </head>
 <body>
