--- a/static/style.css
+++ b/static/style.css
@@ -1,45 +1,63 @@
+/* static/style.css */
+
+/* Define a fonte padrão para o corpo da página */
 body {
     font-family: Arial, sans-serif;
-    background-color: #ffffff;
     margin: 0;
     padding: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
+    background-color: #f4f4f4;
 }
 
+/* Estilo para o contêiner principal */
 .container {
-    background-color: #da8f8f;
+    max-width: 600px;
+    margin: 50px auto;
     padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    background-color: #ffffff;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+/* Estilo para o título */
+h1 {
+    font-size: 24px;
+    color: #333;
+    margin-bottom: 20px;
     text-align: center;
 }
 
-h1 {
-    margin-bottom: 20px;
+/* Estilo para o rótulo do formulário */
+label {
+    display: block;
+    font-size: 16px;
+    margin-bottom: 8px;
+    color: #555;
 }
 
-form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
+/* Estilo para o input de arquivo */
 input[type="file"] {
+    display: block;
     margin-bottom: 20px;
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    width: 100%;
 }
 
+/* Estilo para o botão de envio */
 button {
+    display: inline-block;
     padding: 10px 20px;
-    background-color: #ffffff;
-    color: rgb(126, 36, 36);
+    font-size: 16px;
+    color: #ffffff;
+    background-color: #007bff;
     border: none;
-    border-radius: 5px;
+    border-radius: 4px;
     cursor: pointer;
+    transition: background-color 0.3s ease;
 }
 
 button:hover {
-    background-color: #ffffff;
+    background-color: #0056b3;
 }
+
