--- a/static/style.css
+++ b/static/style.css
@@ -1,63 +1,45 @@
-/* static/style.css */
-
-/* Define a fonte padrão para o corpo da página */
 body {
     font-family: Arial, sans-serif;
+    background-color: #ffffff;
     margin: 0;
     padding: 0;
-    background-color: #f4f4f4;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
 }
 
-/* Estilo para o contêiner principal */
 .container {
-    max-width: 600px;
-    margin: 50px auto;
+    background-color: #da8f8f;
     padding: 20px;
-    background-color: #ffffff;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-
-/* Estilo para o título */
-h1 {
-    font-size: 24px;
-    color: #333;
-    margin-bottom: 20px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
     text-align: center;
 }
 
-/* Estilo para o rótulo do formulário */
-label {
-    display: block;
-    font-size: 16px;
-    margin-bottom: 8px;
-    color: #555;
-}
-
-/* Estilo para o input de arquivo */
-input[type="file"] {
-    display: block;
+h1 {
     margin-bottom: 20px;
-    padding: 10px;
-    border: 1px solid #ddd;
-    border-radius: 4px;
-    width: 100%;
 }
 
-/* Estilo para o botão de envio */
+form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+input[type="file"] {
+    margin-bottom: 20px;
+}
+
 button {
-    display: inline-block;
     padding: 10px 20px;
-    font-size: 16px;
-    color: #ffffff;
-    background-color: #007bff;
+    background-color: #ffffff;
+    color: rgb(126, 36, 36);
     border: none;
-    border-radius: 4px;
+    border-radius: 5px;
     cursor: pointer;
-    transition: background-color 0.3s ease;
 }
 
 button:hover {
-    background-color: #0056b3;
+    background-color: #ffffff;
 }
-
