--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <h1>Envie o arquivo CSV</h1>
         <form action="{{ url_for('upload_file') }}" method="post" enctype="multipart/form-data">
-            <label for="file">Selecione o arquivo CSV:</label>
+            <label for="file">Selecione  arquivo CSV:</label>
             <input type="file" name="file" id="file" required>
             <button type="submit">Enviar</button>
         </form>
