--- a/static/style.css
+++ b/static/style.css
@@ -10,10 +10,12 @@ body {
 }
 
 .container {
-    background-color: #da8f8f;
-    padding: 20px;
+    background-color: #FFDE59;
+    padding: 20px 40px;
     border-radius: 10px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    max-width: 600px;
+    width: 100%;
     text-align: center;
 }
 
@@ -21,18 +23,43 @@ h1 {
     margin-bottom: 20px;
 }
 
+
 form {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
+/* Estilo do input de arquivo */
 input[type="file"] {
+    display: block;
+    margin: 10px auto;
+    padding: 10px;
+    background-color: white;
+    border: 2px solid #ccc;
+    border-radius: 10px; /* Borda arredondada */
+    width: 80%; /* Aumentar largura do campo */
+    font-size: 16px; /* Tamanho maior da fonte */
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+input[type="file"]:hover {
+    background-color: #f2f2f2;
+}
+
+ /* input[type="file"] {
     margin-bottom: 20px;
+}*/
+#descricao {
+    border-radius: 8px; /* Ajuste o valor conforme necessário */
+    border: 1px solid #ccc; /* Opcional, define a borda do campo */
+    padding: 10px; /* Opcional, adiciona um pouco de espaço interno */
+    font-size: 16px; /* Opcional, ajusta o tamanho da fonte */
 }
 
 button {
-    padding: 10px 20px;
+    padding: 15px 35px;
     background-color: #ffffff;
     color: rgb(126, 36, 36);
     border: none;
@@ -42,4 +69,20 @@ button {
 
 button:hover {
     background-color: #ffffff;
+}
+
+/* Responsivo */
+@media (max-width: 768px) {
+    .container {
+        padding: 20px;
+    }
+
+    textarea {
+        height: 80px;
+    }
+
+    button {
+        width: 100%;
+        margin: 5px 0;
+    }
 }
