--- a/templates/index.html
+++ b/templates/index.html
@@ -3,17 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="static/hearder_footer.css">
     <link rel="stylesheet" href="static/style.css">
-    <title>Upload CSV</title>
+    <title>Gerador de Mensagens</title>
 </head>
 <body>
+    <header>
+
+        <div class="logo">
+            <a  href="index.html" > <img src="imagens/logo.jpg" alt="Logo"></a>
+        </div>
+
+    </header>
     <div class="container">
-        <h1>Envie o arquivo CSV</h1>
+        <h1>Envie seu arquivo CSV e descreva a mensagem</h1>
         <form action="{{ url_for('upload_file') }}" method="post" enctype="multipart/form-data">
             <label for="file">Selecione  arquivo CSV:</label>
             <input type="file" name="file" id="file" required>
+            <br><br>
+            <label for="descricao">Descrição da Mensagem:</label>
+            <textarea name="descricao" id="descricao" rows="4" cols="50" required></textarea>
+            <br><br>
             <button type="submit">Enviar</button>
         </form>
     </div>
+    <footer>
+
+        <div class="logo_footer">
+            <a href="index.html"><img src="imagens/logo.jpg" alt="logo"></a>
+        </div>
+
+        <div class="botoes_footer">
+            <a href="https://www.ifs.edu.br/"><button>Suporte</button></a>
+        </div> 
+
+    </footer> 
 </body>
 </html>
