--- a/templates/share.html
+++ b/templates/share.html
@@ -3,15 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="static/hearder_footer.css">
     <link rel="stylesheet" href="static/style.css">
     <title>Compartilhar no WhatsApp</title>
 </head>
 <body>
+    <header>
+
+        <div class="logo">
+            <a  href="index.html" > <img src="imagens/logo.jpg" alt="Logo"></a>
+        </div>
+
+    </header>
     <div class="container">
         <h1>Compartilhe as informações no WhatsApp!</h1>
         <a href="https://wa.me/?text={{ mensagem_compartilhamento }}" target="_blank">
             <button type="button">Compartilhar no WhatsApp</button>
         </a>
     </div>
+    <footer>
+
+        <div class="logo_footer">
+            <a href="index.html"><img src="imagens/logo.jpg" alt="logo"></a>
+        </div>
+
+        <div class="botoes_footer">
+            <a href="https://www.ifs.edu.br/"><button>Suporte</button></a>
+        </div> 
+
+    </footer> 
 </body>
 </html>
