--- a/templates/review.html
+++ b/templates/review.html
@@ -13,10 +13,10 @@
     <header>
 
         <div class="logo">
-            <a  href="index.html" > <img src="imagens/logo.jpg" alt="Logo"></a>
+            <img src="static/images/logo.png" alt="Logo" class="logo">
         </div>
-
     </header>
+
     <div class="container">
         <h1>Revisar Mensagem</h1>
         <div class="message-preview">
@@ -32,10 +32,11 @@
             <button type="submit" name="acao" value="gerar_nova">Gerar Nova Mensagem</button>
         </form>
     </div>
+    
     <footer>
 
         <div class="logo_footer">
-            <a href="index.html"><img src="imagens/logo.jpg" alt="logo"></a>
+            <a href="index.html"><img src="static/images/logo.png" alt="logo"></a>
         </div>
 
         <div class="botoes_footer">
