--- a/templates/share.html
+++ b/templates/share.html
@@ -10,9 +10,12 @@
 <body>
     <header>
 
-        <div class="logo">
-            <a  href="index.html" > <img src="imagens/logo.jpg" alt="Logo"></a>
-        </div>
+        <header>
+
+            <div class="logo">
+                <img src="static/images/logo.png" alt="Logo" class="logo">
+            </div>
+        </header>
 
     </header>
     <div class="container">
@@ -24,7 +27,7 @@
     <footer>
 
         <div class="logo_footer">
-            <a href="index.html"><img src="imagens/logo.jpg" alt="logo"></a>
+            <a href="index.html"><img src="static/images/logo.png" alt="logo"></a>
         </div>
 
         <div class="botoes_footer">
