--- a/templates/index.html
+++ b/templates/index.html
@@ -11,10 +11,10 @@
     <header>
 
         <div class="logo">
-            <a  href="index.html" > <img src="imagens/logo.jpg" alt="Logo"></a>
+            <img src="static/images/logo.png" alt="Logo" class="logo">
         </div>
-
     </header>
+
     <div class="container">
         <h1>Envie seu arquivo CSV e descreva a mensagem</h1>
         <form action="{{ url_for('upload_file') }}" method="post" enctype="multipart/form-data">
@@ -27,10 +27,11 @@
             <button type="submit">Enviar</button>
         </form>
     </div>
+    
     <footer>
 
         <div class="logo_footer">
-            <a href="index.html"><img src="imagens/logo.jpg" alt="logo"></a>
+            <a href="index.html"><img src="static/images/logo.png" alt="logo"></a>
         </div>
 
         <div class="botoes_footer">
