--- a/static/hearder_footer.css
+++ b/static/hearder_footer.css
@@ -22,7 +22,7 @@ header {
 
 
 .logo img {
-    width: 45%;
+    width: 55%;
     margin-top: 3%;
     margin-left: 35%;
     margin-bottom: 4%;
@@ -56,14 +56,30 @@ footer {
 }
 
 .botoes_footer button {
-    width: 170%;
-    height: 20%;
+    width: 100%;
+
     cursor: pointer;
     border-radius: 62px;
     background-color: #ffffff;
     color: rgb(126, 36, 36);
     border: 1px solid rgb(126, 36, 36);
     margin-top: 30%;
-    padding-bottom: 20%;  
+    padding-bottom: 15%;  
     font-weight: bold;
+}
+
+/* Responsivo */
+@media (max-width: 768px) {
+    .logo_footer img {
+        width: 120px;
+        margin-top: 13%;
+        margin-bottom: 3%;
+    }
+    .botoes_footer {
+        margin-top: 0.7%;
+        margin-left: 45%;
+        margin-bottom: 5%;
+    }
+
+
 }
