--- a/static/style.css
+++ b/static/style.css
@@ -2,6 +2,7 @@ body {
     font-family: Arial, sans-serif;
     background-color: #ffffff;
     margin: 0;
+    margin-bottom: 30%;
     padding: 0;
     display: flex;
     justify-content: center;
